<resources>
    <string name="app_name">SmartCart</string>
    <string name="description">description:</string>
    <string name="price">price:</string>
    <string name="product_name">product name</string>
    <string name="buy_now">Buy Now</string>
    <string name="productdescription">Description:</string>
    <string name="category">Category:</string>
    <string name="discount">Discount:</string>
    <string name="rating">Rating:</string>
    <string name="brand">Brand :</string>
    <string name="productprice">price:</string>
    <string name="Product_name">product name</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="OFF">discount</string>
    <string name="last_refreshed">Last Refreshed:</string>
</resources>