<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background = "@color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/appbar_scrolling_view_behavior"/>

        <TextView
            android:id="@+id/tittle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/Product_name"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:text="@string/productprice"
            android:textColor="@color/black"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="28sp" />
        <TextView
            android:id="@+id/OFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OFF"/>


    </LinearLayout>




</androidx.cardview.widget.CardView>